fixed word-wrap in text generated by user

--- a/src/scss/dashboard/_dashboard.scss
+++ b/src/scss/dashboard/_dashboard.scss
@@ -19,6 +19,7 @@
         .nombre-pagina {
             font-size: 2.8rem;
             text-align: center;
+            overflow-wrap: anywhere;
         }
     }
 
